# fastapi-template-grpc

./: .env.dev  .env.example  .env.prod  .gitignore  README.md  compile_protos.sh  pyproject.toml  requirements.txt  start.sh  stop.sh
app/: main.py
app/core/: config.py  cors.py  exception_handler.py  grpc_server.py  lifespan.py  log.py  response.py
app/grpc_services/: __init__.py  demo_service.py
app/routers/: demo.py
app/routers/grpc/: __init__.py
app/routers/http/: __init__.py  demo.py
app/schemas/: demo.py  response.py
protos/demo/: demo_messages.proto  demo_service.proto  demo_types.proto
protos/demo_service/: demo.proto
